--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,7 @@
         	  android:targetSdkVersion="14" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="jp.ac.iwasaki.isc.event2013.touchchangecolor.TouchCCActivity"
+        <activity android:name="com.hiekichi.touchchangecolor.TouchCCActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
 				  android:configChanges="orientation"
